correct styling error making submission button too short in IE

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ a{
     width: 960px;
     margin: auto;
     margin-top: 30px;
-    height: 75%;
+    height: 78%;
 }
 .secondary{
     color:#4aaaa5;
@@ -88,7 +88,7 @@ textarea{
     text-decoration: none;
     font-size: 16px;
     padding: 5px;
-    width: 10%;
+    width: 12%;
     margin-top: 5px;
 }
 .container{
